# sigspatial2013

./: .gitignore  CMakeLists.txt  Doxyfile  FloatingPoint.h  Generator.cpp  Generator.h  Makefile  README.md  SigSpatial2013.sln  _config.yml  common.cpp  common.h  core.cpp  core.h  defs.h  gmlparser.cpp  gmlparser.h  grid.h  helo  index.html  inside.cpp  main  main.cpp  polygon.cpp  polygon.h  polygon.hpp  utils.cpp  utils.h  version1.cpp  within.cpp
BTree/: btree.h
Core/: Core.h  Core.vcxproj  Core.vcxproj.filters  FloatingPoint.h  Version1.cpp  Version2.cpp
Evaluator/: Evaluator.cpp
GMLNaiveParser/: GMLNaiveParser.cpp  GMLNaiveParser.h
GMLParser/: GMLParser.vcxproj  GMLParser.vcxproj.filters
Generator/: Generator.cpp  Generator.h
Main/: Main.cpp  Main.vcxproj
Polygon/: Polygon.vcxproj  Polygon.vcxproj.filters
SigSpatial2013/: main.cpp
UnitTest/: CoreValidationTest.cpp  GMLNaiveParserTest.cpp  UnitTestMain.cpp  unittest1.cpp
Utility/: Utility.vcxproj  Utility.vcxproj.filters
Version1/: Defs.h  version1.cpp
_includes/: config
src/: CMakeLists.txt  Doxyfile  common.h  core.h  defs.h  gmlparser.cpp  gmlparser.h  grid.cpp  grid.h  grid.hpp  inside.cpp  main.cpp  polygon.cpp  polygon.h  polygon.hpp  utils.cpp  utils.h  within.cpp
test/: CMakeLists.txt  CoreValidationTest.cpp  GMLNaiveParserTest.cpp  GeneralTest.cpp  Makefile  PIPTest.cpp  UnitTestMain.cpp  asmxml.cpp  bst.cpp  core.cpp  general.cpp  inside.cpp  memory.cpp  orientation.cpp  parser.cpp  pip.cpp  stress.cpp  test  test.cpp  testclock.h  utils.cpp  utils.h  within.cpp
(+155 files in other folders)
